# archweb

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .travis.yml  AUTHORS  Design  HACKING  Makefile  README  README.md  TODO  archweb.wsgi  conftest.py  database.db  feeds.py  local_settings.py.example  manage.py  migrate_signoff.sql  newrelic.ini  pyproject.toml  pytest.ini  requirement_tests.txt  requirements.txt  requirements_prod.txt  requirements_test.txt  ruff.toml  settings.py  setup.cfg  sitemaps.py  urls.py  utils.py
.github/: FUNDING.yml
.github/workflows/: main.yml
api/: deprecation.py  router.py  urls.py
api/routes/: releng.py
api/schemas/: releng.py
api/tests/: test_deprecation.py  test_releng.py  test_schema_validation.py
common/: models.py
common/templatetags/: validation.py
commonstyle/templatetags/: archnavbar.py
devel/: admin.py  fields.py  forms.py  models.py  reports.py  tests.py  urls.py  utils.py  views.py
devel/auth/: DevelOIDCAuthenticationBackend.py  constants.py
devel/fixtures/: staff_groups.json
devel/migrations/: 0001_initial.py  0001_squashed_0002_staffgroup.py  0002_auto_20181216_1605.py  0002_auto__add_masterkey.py  0002_staffgroup.py  0003_auto_20191009_1924.py  0003_auto__add_pgpsignature.py  0004_masterkey_dates.py  0004_userprofile_website_rss.py  0005_auto_20200628_1600.py  0005_auto__add_userprofile.py  0006_auto__add_field_userprofile_country.py  0006_userprofile_rebuilderd_updates.py  0007_auto_20210221_1612.py  0007_auto_20210523_2038.py  0007_auto_assign_countries.py  0008_alter_userprofile_repos_auth_token_and_more.py  0008_auto__add_field_userprofile_last_modified.py  0009_alter_userprofile_public_email_and_more.py  0009_alter_userprofile_time_zone_alter_userprofile_yob.py  0009_auto__add_developerkey.py  0010_auto__add_index_pgpsignature_signee__add_index_pgpsignature_signer.py  0010_merge_20230312_1527.py  0011_auto__del_field_pgpsignature_valid__add_field_pgpsignature_revoked.py  0011_userprofile_social.py  0012_alter_userprofile_social_alter_userprofile_time_zone.py
devel/templatetags/: group.py  validation.py
devel/tests/: test_devel.py  test_pgp_import.py  test_read_bumpbuddy_status.py  test_rematch_developers.py  test_reporead.py  test_reports.py  test_retire_user.py  test_templatetags.py  test_user.py
docs/: mirror_access.md
end2end/: __init__.py  test_todo.py
isotests/: admin.py  models.py  urls.py  views.py
isotests/fixtures/: architecture.json  bootloaders.json  boottype.json  clockchoices.json  filesystems.json  hardware.json  installtype.json  isotypes.json  modules.json  source.json
isotests/templates/: iso_list.html
lib/: sitelogin.py  utils.py
main/: admin.py  context_processors.py  fields.py  log.py  markdown.py  middleware.py  models.py  storage.py  tests.py  utils.py
main/fixtures/: arches.json  denylist.json  groups.json  mirrorprotocols.json  package.json  repos.json  test_packages.json
main/management/: command.py
main/migrations/: 0001_initial.py  0002_make_maintainer_nullable.py  0002_repo_public_testing.py  0003_migrate_maintainer.py  0003_packagesecurity.py  0003_rebuilderdstatus.py  0004_add_pkgname_index.py  0004_packagesecurity_filename.py  0004_rebuilderdstatus_build_id.py  0004_soname.py  0005_fix_empty_url_pkgdesc.py  0005_merge_0004_rebuilderdstatus_build_id_0004_soname.py  0006_add_more_info_to_packages.py  0006_remove_repo_svn_root.py  0007_add_files_last_update.py  0008_mirror_tiering.py  0009_mirror_rsync_credentials.py  0010_kill_rsync_ip_hostname.py  0011_mirror_notes_text_field.py  0012_is_repo_testing.py  0013_mark_repos_testing.py  0014_mirror_notes_rsync_optional.py  0015_auto__del_field_package_maintainer.py  0016_always_fill_pkgbase.py  0017_auto__chg_field_package_pkgbase.py  0018_auto__del_press.py  0019_auto__del_altforum.py  0020_auto__del_externalproject.py  0021_mark_package_fields_nullable.py  0022_auto__add_field_package_filename.py  0023_auto__add_field_package_flag_date.py  0024_set_initial_flag_date.py  0025_auto__del_field_package_needupdate.py  0026_auto__add_field_package_packager_str__add_field_package_packager.py  0027_auto__chg_field_package_compressed_size__chg_field_package_installed_s.py  0028_auto__add_field_repo_bugs_project__add_field_repo_svn_root.py  0029_fill_in_repo_data.py  0030_move_mirror_models.py  0031_move_news_out.py  0032_auto__add_field_arch_agnostic.py  (+36 more)
main/templatetags/: attributes.py  cdn.py  details_link.py  flags.py  pgp.py  (+1 more)
media/: arch.css  archweb.css  archweb.js  calendar.js  django-jsi18n.js  jquery.js  jquery.tablesorter.min.js  visualize.js
mirrors/: admin.py  fields.py  models.py  tests.py  urls.py  urls_mirrorlist.py  utils.py  views.py
news/: admin.py  models.py  tests.py  urls.py  views.py
planet/: admin.py  models.py  views.py
public/: models.py  tests.py  utils.py  views.py
releng/: admin.py  models.py  tests.py  urls.py  views.py
retro/: tests.py  views.py
scripts/: daily_cleanup.py  djangoshell.sh  reporead.py
sitestatic/: archweb-mobile.css  archweb-print.css  archweb.css  archweb.js  base.js  bootstrap-typeahead.js  bootstrap-typeahead.min.js  famfamfam-flags.css  flaghelp.css  homepage.js  jquery.tablesorter.js  konami.pack.js
templates/: 403.html  404.html  500.html  base.html  error_page.html  errors.html  general_form.html  status_page.html
todolists/: admin.py  models.py  urls.py  utils.py  views.py
visualize/: tests.py  urls.py  views.py
wiki/: models.py  views.py
(+315 files in other folders)
