[project]
name = "archweb"
version = "0.1.0"
description = "Arch Linux website code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bencode-py==4.0.0",
    "bleach==6.3.0",
    "django==5.2.11",
    "django-countries==8.2.0",
    "django-csp==4.0",
    "django-prometheus==2.4.1",
    "feedparser==6.0.12",
    "ipy==1.1",
    "jsmin==3.0.1",
    "markdown==3.10.1",
    "parse==1.20.2",
    "pgpdump==1.5",
    "requests==2.32.5",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
    "django-debug-toolbar==6.1.0",
]
prod = [
    "pyasyncore==1.0.5",
    "pyinotify==0.9.6",
    "pymemcache==4.0.0",
]
postgres = [
    "psycopg2==2.9.11",
]
smtp = [
    "aiosmtpd>=1.4.6",
]

[tool.ruff]
line-length = 118
exclude = [
    "*/migrations/*.py",  # Ignore Django migrations
    "archlinux_common_style/*",  # git submodule
]

[tool.ruff.lint]
select = [
    "A",       # flake8-builtins
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "DJ",      # flake8-django
    "E",       # pycodestyle
    "F",       # pyflakes
    "FBT",     # flake8-boolean-trap
    "G",       # flake8-logging-format
    "I",       # isort
    "ICN",     # flake8-import-conventions
    "ISC",     # flake8-implicit-str-concat
    "PIE",     # flake8-pie
    "PLE",     # pylint errors
    "RSE",     # flake8-raise
    "RUF",     # ruff rules
    "T10",     # flake8-debugger
    "TCH",     # flake8-type-checking
    "UP032",   # f-string
    "W",       # warnings (mostly whitespace)
    "YTT",     # flake8-2020
]

ignore = [
    "E731", # Do not assign a `lambda` expression, use a `def`
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    # TODO: add these one by one
    "DJ001", # Avoid using `null=True` on string-based fields such as `CharField`
    "DJ006", # Do not use `exclude` with `ModelForm`, use `fields` instead
    "DJ012", # Order of model's inner classes, methods, and fields does not follow the Django Style Guide: `Meta` class should come before `get_absolute_url`
    "FBT002", # default-value-positional-argument
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
